--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.12.5",
     "@strapi/plugin-users-permissions": "4.12.5",
+    "@strapi/provider-upload-aws-s3": "4.12.5",
     "@strapi/strapi": "4.12.5",
     "better-sqlite3": "8.5.0",
     "strapi-plugin-import-export-entries": "1.21.1"
